--- a/Codigo/Entrenamiento_y_evaluacion_deteccion_de_daños_en_paviemntos.ipynb
+++ b/Codigo/Entrenamiento_y_evaluacion_deteccion_de_daños_en_paviemntos.ipynb
@@ -301,7 +301,7 @@
       },
       "outputs": [],
       "source": [
-        "labels = [{'name':'ThumbsUp', 'id':1}, {'name':'ThumbsDown', 'id':2}, {'name':'TankYou', 'id':3}, {'name':'LiveLong', 'id':4}]\n",
+        "labels = [{'name':'D00', 'id':1}, {'name':'D10', 'id':2}, {'name':'D20', 'id':3}, {'name':'D40', 'id':4}]\n",
         "\n",
         "with open(files['LABELMAP'], 'w') as f:\n",
         "    for label in labels:\n",
